updated interests with clickable links and fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,20 +214,15 @@ Title
 }
 
 .d-block {
-  height: 33vh;
+  height: max-content;
   width: max-content;
   object-fit: cover;
-
   --borderWidth: 3px;
   background: #1D1F20;
   position: relative;
   border-radius: var(--borderWidth);
 
-  image-rendering: -moz-crisp-edges;         /* Firefox */
-  image-rendering:   -o-crisp-edges;         /* Opera */
-  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
-  image-rendering: crisp-edges;
-  -ms-interpolation-mode: nearest-neighbor; 
+   
 }
 
 
@@ -534,10 +529,86 @@ section .container {
   padding-right: 15px;
 }
 
-.chat__text {
+/* 
+--------------------------------------------------------------
+# Modals
+--------------------------------------------------------------
+
+*/
+/* Styles for Clickable Div */
+.clickable-div {
+  /* Your styles here */
+  cursor: pointer;
+}
+
+/* Modal Styles */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-image {
+  max-width: 80%;
+  max-height: 80%;
+}
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 24px;
+  color: grey;
+  z-index: 2;
+}
+
+/* 
+--------------------------------------------------------------
+# Badges
+--------------------------------------------------------------
+
+*/
+@media (min-width: 576) {
+  .badge__container > .skills.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    
+  }
+}
+@media (min-width: 768) {
+  .badge__container > .skills.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 2px;
+  }
+}
+.badge__container > .skills.container {
+      display: grid;
+      grid-template-columns: .5fr .5fr .5fr .5fr .5fr .5fr; /* 3 evenly spaced columns */
+      grid-template-rows: 1fr 1fr 1fr;  /* 2 evenly spaced rows */
+      gap: 2px;
+}
+
+.badges__logos {
+  
+  width:145px;
+  height: 33px;
+  object-fit: cover;
+  padding-bottom: 3px;
   
   
 }
+/*--------------------------------------------------------------
+# HomePage Animations
+--------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
 # About
